Bug 243691 - Krita freezes for a long time after selecting filter on big image
Summary: Krita freezes for a long time after selecting filter on big image
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: 0.1
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: ---
Assignee: Cyrille Berger
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2010-07-05 21:34 UTC by Sven Langkamp
Modified: 2010-12-06 18:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Langkamp 2010-07-05 21:34:09 UTC
Version:           0.1
OS:                Linux

Open a big image and select a filter. Depending on size of the image and filter this can take up to a few minutes (mostly artistic filters) where Krita does nothing without showing any progress.

Dialog should show up instantly even if filter is calculated in the background

Reproducible: Always




OS: Linux (x86_64) release 2.6.32-23-generic
Compiler: cc
Comment 1 Sven Langkamp 2010-07-13 16:26:33 UTC
The problem appears the be the generation of the thumbnails. After I commented the filter processing in KisFiltersModel and KisBookmarkedFilterConfigurationsModel the dialog appears instantly.
Comment 2 pentalis 2010-09-15 17:11:09 UTC
( Self assigning bug, I'll be focusing on this one )
Comment 3 Halla Rempt 2010-10-31 15:50:49 UTC
SVN commit 1191580 by rempt:

Do not calculate filter thumbs if the filter list is hidden

BUG:243691

 M  +10 -3     forms/wdgfilterselector.ui  
 M  +0 -5      kis_filters_model.cc  
 M  +1 -1      widgets/kis_filter_selector_widget.cc  
 M  +50 -1     widgets/kis_filter_selector_widget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191580
Comment 4 Sven Langkamp 2010-11-07 15:19:49 UTC
Problem still exists.
Comment 5 Cyrille Berger 2010-11-09 21:45:50 UTC
Assigning to myself, I will look at threading the thumbnail tomorrow.
Comment 6 Cyrille Berger 2010-11-12 00:01:55 UTC
SVN commit 1195758 by berger:

Compute preview of filters in threads. This fix UI blocking issues.

BUG: 243691


 M  +41 -3     kis_bookmarked_filter_configurations_model.cc  
 M  +3 -0      kis_bookmarked_filter_configurations_model.h  
 M  +39 -9     kis_filters_model.cc  
 M  +3 -0      kis_filters_model.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195758
Comment 7 Ganesh Paramasivam 2010-12-06 18:43:52 UTC
commit 84164d2080454961bd83aeed63f1779d70b1edac
branch words-change_tracking-ganeshp
Merge: 5d79bdb d9e8624
Author: Ganesh Paramasivam <ganesh@crystalfab.com>
Date:   Fri Nov 12 04:31:30 2010 +0000

    Merged revisions 1194087,1194095,1194149,1194209,1194219,1194245-1194246,1194249,1194251,1194267,1194290,1194297,1194304,1194486,1194510,1194522-1194523,1194529-1194530,1194534,1194562,1194632,1194647,1194662,1194700,1194732,1194751,1194763,1194766,1194775,1194782,1194811,1194947,1195025,1195082,1195092,1195096,1195103,1195105-1195108,1195116,1195191,1195202,1195246,1195305,1195327,1195362,1195379,1195409,1195450,1195466-1195467,1195484,1195494,1195518,1195526-1195527,1195531,1195539,1195553,1195559,1195566,1195585,1195597,1195620,1195758 via svnmerge from
    svn+ssh://ganeshp@svn.kde.org/home/kde/trunk/koffice
    
    ........
      r1194087 | berger | 2010-11-08 13:35:22 +0530 (Mon, 08 Nov 2010) | 5 lines
    
      (possible) Fix: strings shown untranslated in the user interface
    
      CCBUG:251606
    ........
      r1194095 | zander | 2010-11-08 14:38:27 +0530 (Mon, 08 Nov 2010) | 3 lines
    
      Add files I forgot yesterday.
    
      Sorry about that...
    ........
      r1194149 | berger | 2010-11-08 15:05:39 +0530 (Mon, 08 Nov 2010) | 4 lines
    
      Fix: more static object should not try to make a translation
    
      CCBUG: 251606
    ........
      r1194209 | scripty | 2010-11-08 15:37:35 +0530 (Mon, 08 Nov 2010) | 1 line
    
      SVN_SILENT made messages (.desktop file)
    ........
      r1194219 | rempt | 2010-11-08 16:03:37 +0530 (Mon, 08 Nov 2010) | 1 line
    
      Do not compile krita if we have no lcms at all.
    ........
      r1194245 | danders | 2010-11-08 18:19:48 +0530 (Mon, 08 Nov 2010) | 2 lines
    
      Duration spinbox: Limit unit to min/max also when entering from keyboard.
    ........
      r1194246 | danders | 2010-11-08 18:23:17 +0530 (Mon, 08 Nov 2010) | 3 lines
    
      Fix rounding problem when scaling estimates.
      Use the configured min/max duration units in the used effort editor.
    ........
      r1194249 | lassin | 2010-11-08 18:27:30 +0530 (Mon, 08 Nov 2010) | 2 lines
    
      Fixed pptx text shrinking so that value can be received also from masterslide.
    ........
      r1194251 | rempt | 2010-11-08 18:39:01 +0530 (Mon, 08 Nov 2010) | 1 line
    
      LCMS 2 is new enough as well.
    ........
      r1194267 | lassin | 2010-11-08 19:44:12 +0530 (Mon, 08 Nov 2010) | 2 lines
    
      Fixed bullet character of drawingML to be empty when not specified.
    ........
      r1194290 | rempt | 2010-11-08 20:49:36 +0530 (Mon, 08 Nov 2010) | 1 line
    
      proper fix for warning
    ........
      r1194297 | jsimon | 2010-11-08 21:05:22 +0530 (Mon, 08 Nov 2010) | 1 line
    
      Follow-up to boud's warning fixes
    ........
      r1194304 | cfeck | 2010-11-08 21:52:11 +0530 (Mon, 08 Nov 2010) | 2 lines
    
      SVN_SILENT return
    ........
      r1194486 | zachmann | 2010-11-09 10:08:28 +0530 (Tue, 09 Nov 2010) | 8 lines
    
      Honor plugin configuration
    
      Pass the configuration to the plugin loader so it is honored.
      Don't load kpresenter plugins in other apps
    
      BUG: 251970
      BUG: 251973
    ........
      r1194510 | dkazakov | 2010-11-09 13:31:56 +0530 (Tue, 09 Nov 2010) | 5 lines
    
      Make a test in KisLayerTest faster
    
      90s for a single test is too much for regular unit-testing. When
      something happens you can always test this case more thoroughtly.
    ........
      r1194522 | mkruisselbrink | 2010-11-09 14:31:43 +0530 (Tue, 09 Nov 2010) | 1 line
    
      don't crash if the xls document contains more rows that kspread supports (should not be a problem in koffice-essen anyway)
    ........
      r1194523 | mkruisselbrink | 2010-11-09 14:31:45 +0530 (Tue, 09 Nov 2010) | 1 line
    
      it seems this assert is meant to always fail, so make it so
    ........
      r1194529 | danders | 2010-11-09 15:17:30 +0530 (Tue, 09 Nov 2010) | 2 lines
    
      SVN_SILENT explicit
    ........
      r1194530 | danders | 2010-11-09 15:18:35 +0530 (Tue, 09 Nov 2010) | 2 lines
    
      Add some estimate scaling tests.
    ........
      r1194534 | danders | 2010-11-09 15:19:42 +0530 (Tue, 09 Nov 2010) | 2 lines
    
      Fix bug in schedule distribution xml save/load.
    ........
      r1194562 | dkazakov | 2010-11-09 16:12:02 +0530 (Tue, 09 Nov 2010) | 9 lines
    
      Added a real unittest for KisConvolutionPainter
    
      This test checks the correctness of the convolution algorithm by its
      (convolution) definition.
    
      Results:
      KisConvolutionWorkerFFT works fine
      KisConvolutionWorkerSpatial does not work fine =)
    ........
      r1194632 | lassin | 2010-11-09 16:39:03 +0530 (Tue, 09 Nov 2010) | 2 lines
    
      Fixed some autoFit bugs in pptx filter.
    ........
      r1194647 | scripty | 2010-11-09 16:54:58 +0530 (Tue, 09 Nov 2010) | 1 line
    
      SVN_SILENT made messages (.desktop file)
    ........
      r1194662 | mlaurent | 2010-11-09 17:59:16 +0530 (Tue, 09 Nov 2010) | 2 lines
    
      Fix mem leak
    ........
      r1194700 | breitmeyer | 2010-11-09 20:13:22 +0530 (Tue, 09 Nov 2010) | 4 lines
    
      fixed a crash, caused by an incomplete shapeProperty parsing
      this is only a temporary fix, a complete revisit of shape property
      parsing would be wise and will happen soon
    ........
      r1194732 | vandenoever | 2010-11-09 23:03:11 +0530 (Tue, 09 Nov 2010) | 1 line
    
      Use jing.jar if it can be found and add Relax NG for ODF 1.0 and 1.1.
    ........
      r1194751 | dkazakov | 2010-11-10 01:19:03 +0530 (Wed, 10 Nov 2010) | 5 lines
    
      Fix spatial convolution filter
    
      Rounding for integers should have been done on a level of
      KisMathToolbox.
    ........
      r1194763 | berger | 2010-11-10 01:43:22 +0530 (Wed, 10 Nov 2010) | 4 lines
    
      Fix: crash when switching to the tool paint after using space and being locked into the pan tool
    
      CCBUG: 256415
    ........
      r1194766 | berger | 2010-11-10 02:01:46 +0530 (Wed, 10 Nov 2010) | 5 lines
    
      Fix: crash when replaying a macro with a filter
    
      BUG:256254
    ........
      r1194775 | langkamp | 2010-11-10 02:34:43 +0530 (Wed, 10 Nov 2010) | 1 line
    
      fix crash on saving image to kostore
    ........
      r1194782 | berger | 2010-11-10 03:04:53 +0530 (Wed, 10 Nov 2010) | 2 lines
    
      add a script to set/get the settings from a kpp
    ........
      r1194811 | staniek | 2010-11-10 04:19:07 +0530 (Wed, 10 Nov 2010) | 1 line
    
      fix empty icon
    ........
      r1194947 | lassin | 2010-11-10 14:21:39 +0530 (Wed, 10 Nov 2010) | 2 lines
    
      Fixed ole replacement pictures in xlsx files to have more sensible position & size.
    ........
      r1195025 | ingwa | 2010-11-10 15:22:30 +0530 (Wed, 10 Nov 2010) | 5 lines
    
      * Handle negative window widths
      * Fix a bug in world transform calculation when there was only a
        window defined and no viewport.
    ........
      r1195082 | scripty | 2010-11-10 15:43:39 +0530 (Wed, 10 Nov 2010) | 1 line
    
      SVN_SILENT made messages (.desktop file)
    ........
      r1195092 | breitmeyer | 2010-11-10 16:03:06 +0530 (Wed, 10 Nov 2010) | 4 lines
    
      Added series line and color handling to ms2003 filters and make some
      small adjustments to the Charting classes and made sure the 2007 filter
      uses them correctly too
    ........
      r1195096 | vandenoever | 2010-11-10 16:26:28 +0530 (Wed, 10 Nov 2010) | 1 line
    
      Add a version of the ODF 1.2 Relax NG that allows for koffice specific extensions. The validation code has been adapted to use the extended schema.
    ........
      r1195103 | mkruisselbrink | 2010-11-10 17:10:54 +0530 (Wed, 10 Nov 2010) | 1 line
    
      replcae kdbgstream with QDebug to compile with no deprecated code in kdelibs
    ........
      r1195105 | mkruisselbrink | 2010-11-10 17:11:07 +0530 (Wed, 10 Nov 2010) | 1 line
    
      kotext doesn't use anything from libkutils, so don't link to it
    ........
      r1195106 | mkruisselbrink | 2010-11-10 17:11:09 +0530 (Wed, 10 Nov 2010) | 1 line
    
      don't use deprecated kdelibs api's
    ........
      r1195107 | mkruisselbrink | 2010-11-10 17:11:10 +0530 (Wed, 10 Nov 2010) | 1 line
    
      deprecated--
    ........
      r1195108 | mkruisselbrink | 2010-11-10 17:11:12 +0530 (Wed, 10 Nov 2010) | 1 line
    
      deprecated--
    ........
      r1195116 | rempt | 2010-11-10 17:43:27 +0530 (Wed, 10 Nov 2010) | 1 line
    
      Krita actually doesn't use qimageblitz anymore.
    ........
      r1195191 | lassin | 2010-11-10 20:29:10 +0530 (Wed, 10 Nov 2010) | 2 lines
    
      Fixed pptx ole replacement pictures to work in more cases.
    ........
      r1195202 | lassin | 2010-11-10 20:53:51 +0530 (Wed, 10 Nov 2010) | 2 lines
    
      Improved pptx graphicFrame styling.
    ........
      r1195246 | ingwa | 2010-11-10 22:18:29 +0530 (Wed, 10 Nov 2010) | 4 lines
    
      * Fix a wrong if statement
      * Make a correct world transformation when there is no viewport defined.
    ........
      r1195305 | langkamp | 2010-11-11 01:14:19 +0530 (Thu, 11 Nov 2010) | 1 line
    
      put koffice:anchor-type into common-text-anchor-attlist to cover more cases
    ........
      r1195327 | langkamp | 2010-11-11 02:25:27 +0530 (Thu, 11 Nov 2010) | 1 line
    
      fix mirror attribute
    ........
      r1195362 | langkamp | 2010-11-11 03:54:42 +0530 (Thu, 11 Nov 2010) | 1 line
    
      add koffice:nodeTypes attribute
    ........
      r1195379 | langkamp | 2010-11-11 04:41:55 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      fix saving on text:note, content has to be enclosed by a text:note-body
    ........
      r1195409 | langkamp | 2010-11-11 05:36:15 +0530 (Thu, 11 Nov 2010) | 1 line
    
      reverse the order of saving text on shape and enhanced geometry, needed to validate
    ........
      r1195450 | zachmann | 2010-11-11 11:15:32 +0530 (Thu, 11 Nov 2010) | 10 lines
    
      Fix: Bug 255993 - Crash loading file due to RDF code
    
      The problem is that the rdfData is not set when loading the header.
    
      Set the rdf data when loading the header and also add a test that if rdfData is there,
      if not return.
    
      BUG: 255993
    ........
      r1195466 | lassin | 2010-11-11 14:27:55 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      Fixed xlsx drawing frames to have unit.
    ........
      r1195467 | lassin | 2010-11-11 14:32:19 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      Added minor fix to the previous xlsx drawing fix.
    ........
      r1195484 | breitmeyer | 2010-11-11 15:33:55 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      fixed line and marker handling in 2003 filters, and the color handling
    ........
      r1195494 | boemann | 2010-11-11 15:52:28 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      fix compile
    ........
      r1195518 | rempt | 2010-11-11 17:33:01 +0530 (Thu, 11 Nov 2010) | 1 line
    
      really remove qimagblitz dependency, it wasn't used but still referenced
    ........
      r1195526 | rempt | 2010-11-11 18:28:28 +0530 (Thu, 11 Nov 2010) | 1 line
    
      unused parameter
    ........
      r1195527 | rempt | 2010-11-11 18:28:31 +0530 (Thu, 11 Nov 2010) | 4 lines
    
      Use the image file suffix instead of 0
    
      If we pass 0, Qt tries to determine the type of the image file by
      checking the contents. For some image files, that breaks, notably eps.
    ........
      r1195531 | vandenoever | 2010-11-11 18:32:25 +0530 (Thu, 11 Nov 2010) | 1 line
    
      Filter out false positives reported by libxml2.
    ........
      r1195539 | vandenoever | 2010-11-11 18:44:16 +0530 (Thu, 11 Nov 2010) | 1 line
    
      Make check more robust against unexcpected types.
    ........
      r1195553 | vandenoever | 2010-11-11 19:21:19 +0530 (Thu, 11 Nov 2010) | 1 line
    
      Add Fedore specific locations for OOoSDK.
    ........
      r1195559 | vandenoever | 2010-11-11 19:37:43 +0530 (Thu, 11 Nov 2010) | 1 line
    
      Do a proper string search.
    ........
      r1195566 | vandenoever | 2010-11-11 19:49:09 +0530 (Thu, 11 Nov 2010) | 1 line
    
      Fix build of slidecompare on Fedora.
    ........
      r1195585 | breitmeyer | 2010-11-11 20:35:45 +0530 (Thu, 11 Nov 2010) | 5 lines
    
      added support for fills, background fills will come later, as well as
      the problematic data saved by ms2007, they seem to place xml blobs in
      some places of the xls documents, very weird
    ........
      r1195597 | lassin | 2010-11-11 20:52:19 +0530 (Thu, 11 Nov 2010) | 2 lines
    
      Fixed a bug where pptx slideLayout would ignore its placement.
    ........
      r1195620 | breitmeyer | 2010-11-11 21:48:39 +0530 (Thu, 11 Nov 2010) | 3 lines
    
      reverted 1194700 it created more crashes than it fixed,
      a real fix is in work
    ........
      r1195758 | berger | 2010-11-12 04:32:29 +0530 (Fri, 12 Nov 2010) | 4 lines
    
      Compute preview of filters in threads. This fix UI blocking issues.
    
      BUG: 243691
    ........
    
    svn path=/branches/work/koffice-change-tracking/; revision=1195842