Do not calculate filter thumbs if the filter list is hidden

BUG:243691

svn path=/trunk/koffice/; revision=1191580